--- a/main.html
+++ b/main.html
@@ -10,10 +10,16 @@
 	<!-- the entire body must be written by student -->
 	<nav>
 		<h1>3 random videos</h1>
-		<ul id="headers">
-			<a target="_blank" href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">Home</a>
-			<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">About us</a>
-			<a href="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">Contact us</a>
+		<ul>
+			<video controls>
+				<source src= http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4>
+			</video>
+			<video controls>
+				<source src= http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4
+			</video>
+			<video controls>
+				<source src= http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4
+			</video>
 		</ul>
 	</nav>
     <script type="text/javascript" src="./script.js">
